--- a/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
+++ b/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
@@ -13,9 +13,11 @@ targets:
       units:
       type: boolean
       names:
-          - a inhibitor of cav3 t-type calcium channels activity
-          - inhibiting cav3 t-type calcium channels activity
-          - a t-type calcium channel blocker
+          - noun: an inhibitor of cav3 t-type calcium channels activity
+          - gerund: inhibiting cav3 t-type calcium channels activity
+          - noun: a t-type calcium channel blocker
+          - verb: blocks t-type calcium channels
+          - verb: inhibts cav3 t-type calcium channels
       pubchem_aids:
           - 1053190
           - 489005
