--- a/data/lipophilicity/meta.yaml
+++ b/data/lipophilicity/meta.yaml
@@ -7,8 +7,9 @@ targets:
       units:
       type: continuous
       names:
-          - octanol/water distribution coefficient (logD at pH 7.4)
-          - octanol/water distribution coefficient
+          - name: octanol/water distribution coefficient (logD at pH 7.4)
+          - name: logD at pH 7.4
+          - name: octanol/water distribution coefficient
       uris:
           - http://www.bioassayontology.org/bao#BAO_0002129
           - http://purl.obolibrary.org/obo/MI_2107
