--- a/data/m1_muscarinic_receptor_agonists_butkiewicz/meta.yaml
+++ b/data/m1_muscarinic_receptor_agonists_butkiewicz/meta.yaml
@@ -13,8 +13,8 @@ targets:
       units:
       type: boolean
       names:
-          - a positive allosteric modulator of m1 muscarinic activity
-          - displaying positive allosteric modulation of the m1 muscarinic receptor
+          - name: a positive allosteric modulator of m1 muscarinic activity
+          - gerund: displaying positive allosteric modulation of the m1 muscarinic receptor
       pubchem_aids:
           - 626
           - 1488
