--- a/data/clintox/meta.yaml
+++ b/data/clintox/meta.yaml
@@ -10,9 +10,9 @@ targets:
       units:
       type: boolean
       names:
-          - clinically toxic
-          - displaying clinical toxicity
-          - toxic
+          - adjective: clinically toxic
+          - gerund: displaying clinical toxicity
+          - adjective: toxic
       uris:
           - http://purl.bioontology.org/ontology/MESH/Q000633
           - https://ncit.nci.nih.gov/ncitbrowser/ConceptReport.jsp?dictionary=NCI_Thesaurus&ns=ncit&code=C27990
