--- a/data/choline_transporter_butkiewicz/meta.yaml
+++ b/data/choline_transporter_butkiewicz/meta.yaml
@@ -19,8 +19,9 @@ targets:
       units:
       type: boolean
       names:
-          - a inhibitor of choline transporter activity
-          - inhibitor of choline transporter activity
+          - noun: a inhibitor of choline transporter activity
+          - noun: inhibitor of choline transporter activity
+          - verb: inhibits choline transporter activity
       pubchem_aids:
           - 488975
           - 493221
@@ -38,6 +39,8 @@ identifiers:
       description: SMILES
 license: CC BY 4.0
 links:
+    - url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
+      description: original dataset
     - url: https://doi.org/10.3390/molecules18010735
       description: corresponding publication
     - url: https://doi.org/10.1093/nar/gky1033
@@ -45,7 +48,6 @@ links:
     - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
       description: corresponding publication
 num_points: 302306
-url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
     - |-
       @article{Butkiewicz2013,
