--- a/data/clintox/meta.yaml
+++ b/data/clintox/meta.yaml
@@ -10,9 +10,9 @@ targets:
       units:
       type: boolean
       names:
-          - clinically toxic
-          - displaying clinical toxicity
-          - toxic
+          - adjective: clinically toxic
+          - gerund: displaying clinical toxicity
+          - adjective: toxic
       uris:
           - http://purl.bioontology.org/ontology/MESH/Q000633
           - https://ncit.nci.nih.gov/ncitbrowser/ConceptReport.jsp?dictionary=NCI_Thesaurus&ns=ncit&code=C27990
@@ -27,10 +27,11 @@ identifiers:
       description: SMILES
 license: CC BY 4.0
 links:
+    - url: https://tdcommons.ai/single_pred_tasks/tox/#clintox
+      description: original dataset
     - url: https://doi.org/10.1016/j.chembiol.2016.07.023
       description: corresponding publication
 num_points: 1478
-url: https://tdcommons.ai/single_pred_tasks/tox/#clintox
 bibtex:
     - |-
       @article{Gayvert2016,
