--- a/data/ld50_zhu/meta.yaml
+++ b/data/ld50_zhu/meta.yaml
@@ -10,9 +10,9 @@ targets:
       units: log(1/(mol/kg))
       type: continuous
       names:
-          - acute toxicity rat LD50
-          - rat ld50
-      uri:
+          - noun: acute toxicity rat LD50
+          - noun: rat LD50
+      uris:
           - http://www.bioassayontology.org/bao#BAO_0002117
 identifiers:
     - id: SMILES
@@ -34,7 +34,6 @@ benchmarks:
       link: https://tdcommons.ai/
       split_column: split
 num_points: 7385
-url: https://tdcommons.ai/single_pred_tasks/tox/#acute-toxicity-ld50
 bibtex:
     - |-
       @article{Zhu2009,
