feat: update new names setup for herg_blockers

--- a/data/herg_blockers/meta.yaml
+++ b/data/herg_blockers/meta.yaml
@@ -9,11 +9,14 @@ targets:
       units:
       type: boolean
       names:
-          - hERG blocker
-          - hERG active compound
-          - hERG blocker
-          - human ether-à-go-go related gene (hERG) blocker
-          - activity against Human ether-à-go-go related gene (hERG)
+          - noun: hERG blocker
+          - noun: hERG active compound
+          - noun: hERG active compound (<10uM)
+          - noun: human ether-à-go-go related gene (hERG) blocker
+          - verb: blocks hERG
+          - verb: blocks human ether-à-go-go related gene (hERG)
+          - verb: active against hERG (<10uM)
+          - verb: active against human ether-à-go-go related gene (hERG)
       uris:
           - http://purl.obolibrary.org/obo/MI_2136
 benchmarks:
