--- a/data/herg_central/meta.yaml
+++ b/data/herg_central/meta.yaml
@@ -1,22 +1,20 @@
 ---
 name: herg_central
-description: |-
-    Human ether-a-go-go related gene (hERG) is crucial for the coordination
-    of the heart's beating. Thus, if a drug blocks the hERG, it could lead to severe
-    adverse effects. Therefore, reliable prediction of hERG liability in the early
-    stages of drug design is quite important to reduce the risk of cardiotoxicity-related
-    attritions in the later development stages. There are three targets: hERG_at_1microM,
-    hERG_at_10microM, and hERG_inhib.
+description: "Human ether-à-go-go related gene (hERG) is crucial for the coordination\nof the heart's beating. Thus, if a drug blocks the hERG, it could\
+    \ lead to severe\nadverse effects. Therefore, reliable prediction of hERG liability in the early\nstages of drug design is quite important to reduce\
+    \ the risk of cardiotoxicity-related\nattritions in the later development stages. There are three targets: hERG_at_1microM,\nhERG_at_10microM, and hERG_inhib."
 targets:
     - id: hERG_at_1uM
       description: the percent inhibition of hERG at a 1uM concentration
       units: uM
       type: continuous
       names:
-          - hERG percent inhibition at a 1uM concentration
-          - hERG percent inhibition at 1uM
-          - Human ether-a-go-go related gene (hERG) percent inhibition at a 1uM concentration
-          - Human ether-a-go-go related gene (hERG) percent inhibition at 1uM
+          - noun: hERG percent inhibition at a 1uM concentration
+          - noun: hERG percent inhibition at 1uM
+          - noun: human ether-à-go-go related gene (hERG) percent inhibition at a 1uM concentration
+          - noun: human ether-à-go-go related gene (hERG) percent inhibition at 1uM
+          - verb: active against hERG at a 1uM concentration
+          - verb: active against human ether-à-go-go related gene (hERG) at a 1uM concentration
       uris:
           - http://purl.obolibrary.org/obo/MI_2136
     - id: hERG_at_10uM
@@ -26,8 +24,8 @@ targets:
       names:
           - hERG percent inhibition at a 10uM concentration
           - hERG percent inhibition at 10uM
-          - Human ether-a-go-go related gene (hERG) percent inhibition at a 10uM concentration
-          - Human ether-a-go-go related gene (hERG) percent inhibition at 10uM
+          - Human ether-à-go-go related gene (hERG) percent inhibition at a 10uM concentration
+          - Human ether-à-go-go related gene (hERG) percent inhibition at 10uM
       uris:
           - http://purl.obolibrary.org/obo/MI_2136
     - id: hERG_inhib
@@ -39,10 +37,10 @@ targets:
       type: boolean
       names:
           - hERG inhibition
-          - Human ether-a-go-go related gene (hERG) inhibition
+          - Human ether-à-go-go related gene (hERG) inhibition
           - hERG blocker
-          - Human ether-a-go-go related gene (hERG) blocker
-          - inhibition of Human ether-a-go-go related gene (hERG)
+          - Human ether-à-go-go related gene (hERG) blocker
+          - inhibition of Human ether-à-go-go related gene (hERG)
       uris:
           - http://purl.obolibrary.org/obo/MI_2136
 identifiers:
@@ -59,18 +57,7 @@ links:
       description: Data source
 num_points: 920679
 bibtex:
-    - |-
-      @article{Du2011,
-      doi = {10.1089/adt.2011.0425},
-      url = {https://doi.org/10.1089/adt.2011.0425},
-      year = {2011},
-      month = dec,
-      publisher = {Mary Ann Liebert Inc},
-      volume = {9},
-      number = {6},
-      pages = {580--588},
-      author = {Fang Du and Haibo Yu and Beiyan Zou and Joseph Babcock
-      and Shunyou Long and Min Li},
-      title = {hERGCentral: A Large Database to Store,  Retrieve,  and Analyze Compound Human
-      Ether-a-go-go Related Gene Channel Interactions to Facilitate Cardiotoxicity Assessment in Drug Development},
-      journal = {ASSAY and Drug Development Technologies}
+    - "@article{Du2011,\ndoi = {10.1089/adt.2011.0425},\nurl = {https://doi.org/10.1089/adt.2011.0425},\nyear = {2011},\nmonth = dec,\npublisher = {Mary\
+      \ Ann Liebert Inc},\nvolume = {9},\nnumber = {6},\npages = {580--588},\nauthor = {Fang Du and Haibo Yu and Beiyan Zou and Joseph Babcock\nand Shunyou\
+      \ Long and Min Li},\ntitle = {hERGCentral: A Large Database to Store,  Retrieve,  and Analyze Compound Human\nEther-à-go-go Related Gene Channel Interactions\
+      \ to Facilitate Cardiotoxicity Assessment in Drug Development},\njournal = {ASSAY and Drug Development Technologies}"
