feat: update new names setup for nr_ar_tox21

--- a/data/nr_ar_tox21/meta.yaml
+++ b/data/nr_ar_tox21/meta.yaml
@@ -10,9 +10,11 @@ targets:
       units:
       type: boolean
       names:
-          - Tox21 NR-AR toxicity
-          - NR-AR toxicity
-          - NR-androgen receptor toxicity
+          - noun: NR-AR toxicity
+          - noun: NR-androgen receptor toxicity
+          - verb: toxic in a androgen receptor toxicity assay
+          - adjective: toxic in the NR-AR assay
+          - adjective: toxic in the NR-androgen receptor assay
 uris:
 benchmarks:
     - name: TDC
