feat: update new names setup for nr_ar_tox21

--- a/data/nr_aromatase_tox21/meta.yaml
+++ b/data/nr_aromatase_tox21/meta.yaml
@@ -10,9 +10,11 @@ targets:
       units:
       type: boolean
       names:
-          - Tox21 NR-Aromatase toxicity
-          - NR-Aromatase enzyme toxicity
-          - Aromatase enzyme toxicity
+          - noun: NR-Aromatase enzyme toxicity
+          - noun: Aromatase enzyme toxicity
+          - verb: activity in the NR-Aromatase enzyme toxicity assay
+          - activity: toxic in the NR-Aromatase enzyme assay
+          - activity: toxic in the Aromatase enzyme assay
 uris:
 benchmarks:
     - name: TDC
