--- a/data/nr_er_lbd_tox21/meta.yaml
+++ b/data/nr_er_lbd_tox21/meta.yaml
@@ -10,11 +10,15 @@ targets:
       units:
       type: boolean
       names:
-          - Tox21 NR-ER-LBD toxicity
-          - NR-ER-LBD toxicity
-          - Tox21 NR-estrogen receptor alpha ligand binding domain toxicity
-          - NR-estrogen receptor alpha ligand binding domain toxicity
-          - estrogen receptor alpha ligand binding domain toxicity
+          - noun: NR-ER-LBD toxicity
+          - noun: NR-estrogen receptor alpha ligand binding domain toxicity
+          - noun: estrogen receptor alpha ligand binding domain toxicity
+          - verb: activity in the NR-ER-LBD toxicity assay
+          - verb: activity in the NR-estrogen receptor alpha ligand binding domain assay
+          - verb: activity in the estrogen receptor alpha ligand binding domain assay
+          - adjective: toxic in the NR-ER-LBD assay
+          - adjective: toxic in the NR-estrogen receptor alpha ligand binding domain assay
+          - adjective: toxic in the estrogen receptor alpha ligand binding domain assay
 uris:
 benchmarks:
     - name: TDC
