feat: update new names setup for nr_er_tox21

--- a/data/nr_er_tox21/meta.yaml
+++ b/data/nr_er_tox21/meta.yaml
@@ -10,11 +10,15 @@ targets:
       units:
       type: boolean
       names:
-          - Tox21 R-ER toxicity
-          - NR-ER toxicity
-          - Tox21 NR-Estrogen receptor alpha toxicity
-          - NR-Estrogen receptor alpha toxicity
-          - Estrogen receptor alpha toxicity
+          - noun: NR-ER toxicity
+          - noun: NR-Estrogen receptor alpha toxicity
+          - noun: estrogen receptor alpha toxicity
+          - verb: activity in the NR-ER toxicity assay
+          - verb: activity in the NR-Estrogen receptor alpha toxicity assay
+          - verb: activity in the estrogen receptor alpha toxicity assay
+          - adjective: toxic in the NR-ER assay
+          - adjective: toxic in the NR-Estrogen receptor alpha assay
+          - adjective: toxic in the estrogen receptor alpha assay
 uris:
 benchmarks:
     - name: TDC
