--- a/data/nr_ppar_gamma_tox21/meta.yaml
+++ b/data/nr_ppar_gamma_tox21/meta.yaml
@@ -10,11 +10,15 @@ targets:
       units:
       type: boolean
       names:
-          - Tox21 NR-PPAR-gamma toxicity
-          - NR-PPAR-gamma toxicity
-          - Tox21 NR-Peroxisome proliferator-activated receptor gamma toxicity
-          - NR-Peroxisome proliferator-activated receptor gamma toxicity
-          - Peroxisome proliferator-activated receptor gamma toxicity
+          - noun: NR-PPAR-gamma toxicity
+          - noun: NR-peroxisome proliferator-activated receptor gamma toxicity
+          - noun: peroxisome proliferator-activated receptor gamma toxicity
+          - verb: activity in the NR-PPAR-gamma assay
+          - verb: activity in the NR-peroxisome proliferator-activated receptor gamma assay
+          - verb: activity in the peroxisome proliferator-activated receptor gamma assay
+          - adjective: toxic in the NR-PPAR-gamma assay
+          - adjective: toxic in the NR-peroxisome proliferator-activated receptor gamma assay
+          - adjective: toxic in the peroxisome proliferator-activated receptor gamma assay
 uris:
 benchmarks:
     - name: TDC
