feat: update new names setup for sr_are_tox21

--- a/data/sr_are_tox21/meta.yaml
+++ b/data/sr_are_tox21/meta.yaml
@@ -10,11 +10,15 @@ targets:
       units:
       type: boolean
       names:
-          - Tox21 SR-ARE toxicity
-          - SR-ARE toxicity
-          - Tox21 SR-Antioxidant response element toxicity
-          - SR-Antioxidant response element toxicity
-          - Antioxidant response element toxicity
+          - noun: SR-ARE toxicity
+          - noun: SR-Antioxidant response element toxicity
+          - noun: Antioxidant response element toxicity
+          - verb: activity in the SR-ARE toxicity assay
+          - verb: activity in the SR-Antioxidant response element toxicity assay
+          - verb: activity in the Antioxidant response element toxicity assay
+          - adjective: toxic in the SR-ARE assay
+          - adjective: toxic in the SR-Antioxidant response element assay
+          - adjective: toxic in the Antioxidant response element assay
 uris:
 benchmarks:
     - name: TDC
