feat: update new names setup for nr_ppar_gamma_tox21 fix

--- a/data/nr_ppar_gamma_tox21/meta.yaml
+++ b/data/nr_ppar_gamma_tox21/meta.yaml
@@ -13,9 +13,9 @@ targets:
           - noun: NR-PPAR-gamma toxicity
           - noun: NR-peroxisome proliferator-activated receptor gamma toxicity
           - noun: peroxisome proliferator-activated receptor gamma toxicity
-          - verb: activity in the NR-PPAR-gamma assay
-          - verb: activity in the NR-peroxisome proliferator-activated receptor gamma assay
-          - verb: activity in the peroxisome proliferator-activated receptor gamma assay
+          - verb: activity in the NR-PPAR-gamma toxicity assay
+          - verb: activity in the NR-peroxisome proliferator-activated receptor gamma toxicity assay
+          - verb: activity in the peroxisome proliferator-activated receptor gamma toxicity assay
           - adjective: toxic in the NR-PPAR-gamma assay
           - adjective: toxic in the NR-peroxisome proliferator-activated receptor gamma assay
           - adjective: toxic in the peroxisome proliferator-activated receptor gamma assay
